[project]
name = "daedalus-5g"
version = "0.11.3.dev"
description = "A tool for creating 4G/5G environments both with SDRs and virtual simulation to run experiments in"
authors = [
    { name = "cglewis", email = "clewis@iqt.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python"
]
# Requirements
dependencies = [
    "docker == 6.0.1",
    "dovesnap == 1.1.8",
    "plumbum == 1.8.1",
    "inquirer == 3.1.2",
]

[project.optional-dependencies]
test = [
    "attrs==22.1.0",
    "codecov==2.1.12",
    "pylint==2.16.2",
    "pytype==2023.2.17",
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
    "ruamel.yaml==0.17.21"
]
generate_fs = [
    "essential_generators",
    "numpy"
]
confuser = [
    "fusepy"
]

[project.scripts]
daedalus = "daedalus.__main__:main"

[build-system]
requires = [
    "setuptools >= 62.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "daedalus" ]
package-dir = {"daedalus" = "5G/daedalus"}
include-package-data = true

[tool.setuptools.package-data]
daedalus = ["5G/*",]

