[project]
name = "daedalus-5g"
version = "0.11.8"
description = "A tool for creating 4G/5G environments both with SDRs and virtual simulation to run experiments in"
authors = [
    { name = "cglewis", email = "clewis@iqt.org" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python"
]
# Requirements
dependencies = [
    "docker ==7.0.0",
    "dovesnap ==1.1.21",
    "plumbum ==1.8.2",
    "inquirer ==3.2.3",
]

[project.optional-dependencies]
test = [
    "attrs==23.2.0",
    "codecov==2.1.13",
    "pylint==3.0.3",
    "pytype==2024.1.24",
    "pytest==8.0.0",
    "pytest-cov==4.1.0",
    "ruamel.yaml~=0.17"
]
generate_fs = [
    "essential_generators",
    "numpy"
]
confuser = [
    "fusepy"
]

[project.scripts]
daedalus = "daedalus.__main__:main"

[build-system]
requires = [
    "setuptools >= 62.0.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [ "daedalus" ]
package-dir = {"daedalus" = "5G/daedalus"}
include-package-data = true

[tool.setuptools.package-data]
daedalus = ["5G/*",]

