[metadata]
name = daedalus
summary = A tool for creating 4G/5G environments both with SDRs and virtual simulation to run experiments in
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/Daedalus
platform = any
classifier =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[files]
data_files =
    /opt/daedalus = 5G/*

[entry_points]
console_scripts =
    daedalus = daedalus.__main__:main
